Fix sidebar overlapping rte popup
Former-commit-id: bf0df8cda629dfac65dc2dc5c572c057699d166d

--- a/app/javascript/stylesheets/components/_map.scss
+++ b/app/javascript/stylesheets/components/_map.scss
@@ -1,6 +1,7 @@
 .Map {
   margin-bottom: $base-unit;
   width: 100%;
+  z-index: $z-index-map;
 }
 
 .Map .leaflet-overlay-pane {
